@@ -1,6 +1,7 @@
 ChangeLog file for Endian libencloud
 
 next:
+	- [CONNECT-201] Add OS to HTTP User-Agent
 	- vpn: allow timeout=0 (no timer)
 	- etc: default verbosity=7 for ECE/SECE
 	- ece: fix compilation error in http/handler1.ccp;
